Modificación de la instalación del backend
